--- a/source/index.html
+++ b/source/index.html
@@ -25,7 +25,7 @@
               <path d="M1.13659 0.00020839C0.986512 -0.00251551 0.837358 0.0214885 0.698091 0.0707781C0.558823 0.120068 0.432317 0.193625 0.326173 0.28703C0.22003 0.380436 0.136442 0.49176 0.0804303 0.614315C0.024419 0.73687 -0.00285856 0.868124 0.000236809 1.00019V3.00016C0.000236809 3.26537 0.119959 3.51972 0.333067 3.70725C0.546174 3.89478 0.83521 4.00014 1.13659 4.00014H48.8634C49.0135 4.00286 49.1626 3.97886 49.3019 3.92957C49.4412 3.88028 49.5677 3.80672 49.6738 3.71332C49.78 3.61991 49.8636 3.50859 49.9196 3.38603C49.9756 3.26348 50.0029 3.13222 49.9998 3.00016V1.00019C49.9998 0.734979 49.88 0.48063 49.6669 0.293097C49.4538 0.105563 49.1648 0.00020839 48.8634 0.00020839H1.13659ZM1.13659 10C0.986512 9.99731 0.837358 10.0213 0.698091 10.0706C0.558823 10.1199 0.432317 10.1935 0.326173 10.2869C0.22003 10.3803 0.136442 10.4916 0.0804303 10.6141C0.024419 10.7367 -0.00285856 10.868 0.000236809 11V13C0.000236809 13.2652 0.119959 13.5195 0.333067 13.7071C0.546174 13.8946 0.83521 14 1.13659 14H48.8634C49.0135 14.0027 49.1626 13.9787 49.3019 13.9294C49.4412 13.8801 49.5677 13.8065 49.6738 13.7131C49.78 13.6197 49.8636 13.5084 49.9196 13.3859C49.9756 13.2633 50.0029 13.132 49.9998 13V11C49.9998 10.7348 49.88 10.4805 49.6669 10.2929C49.4538 10.1054 49.1648 10 48.8634 10H1.13659ZM1.13659 19.9999C0.986512 19.9971 0.837358 20.0211 0.698091 20.0704C0.558823 20.1197 0.432317 20.1933 0.326173 20.2867C0.22003 20.3801 0.136442 20.4914 0.0804303 20.614C0.024419 20.7365 -0.00285856 20.8678 0.000236809 20.9998V22.9998C0.000236809 23.265 0.119959 23.5194 0.333067 23.7069C0.546174 23.8944 0.83521 23.9998 1.13659 23.9998H48.8634C49.0135 24.0025 49.1626 23.9785 49.3019 23.9292C49.4412 23.8799 49.5677 23.8064 49.6738 23.713C49.78 23.6196 49.8636 23.5082 49.9196 23.3857C49.9756 23.2631 50.0029 23.1319 49.9998 22.9998V20.9998C49.9998 20.7346 49.88 20.4803 49.6669 20.2927C49.4538 20.1052 49.1648 19.9999 48.8634 19.9999H1.13659Z" fill="white"/>
             </svg>
           </button>
-          <ul class="main-nav__list site-list">
+          <ul class="main-nav__list site-list visually-hidden">
             <li class="site-list__item site-list__item--current">
               <a href="#">
                 Главная
@@ -49,12 +49,13 @@
           </ul>
         </nav>
       </div>
+      <h2 class="page-header__slogan">Взгляните на жизнь иначе!</h2>
+      <div class="page-header__phone-screen"></div>
     </header>
     <main class="page-main">
       <h1 class="visually-hidden">Скачайте приложение социальной сети Pink</h1>
       <section class="download-app">
         <div class="download-app__wrapper">
-          <h2 class="download-app__slogan">Взгляните на жизнь иначе!</h2>
           <button class="download-app__button button" type="button">Скачать приложение</button>
           <ul class="download-app__market-list">
             <li class="market-list__item">
@@ -94,8 +95,10 @@
       <section class="features">
         <h2 class="visually-hidden">Список основных функций приложения</h2>
         <div class="features__wrapper">
-          <h2 class="features__slogan">Устали от серости мегаполиса?</h2>
-          <h2 class="features__slogan">Нам есть, что вам предложить!</h2>
+          <div class="features__slogan">
+            <h2 class="features__slogan-text">Устали от серости мегаполиса?</h2>
+            <h2 class="features__slogan-text">Нам есть, что вам предложить!</h2>
+          </div>
           <ul class="features__list">
             <li class="features__item">
               <h3 class="features__title">Поднимает настроение</h3>
@@ -110,6 +113,9 @@
               <p class="features__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
             </li>
           </ul>
+          <div class="features__image">
+            <img src="/img/phone-320.png">
+          </div>
         </div>
       </section>
       <section class="reviews">
@@ -122,13 +128,13 @@
                 <p class="reviews__author-text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
               </div>
             </blockquote>
-            <button class="reviews__prev" type="button">Предыдущий отзыв</button>
-            <button class="reviews__next" type="button">Следующий отзыв</button>
+            <button class="reviews__prev visually-hidden" type="button">Предыдущий отзыв</button>
+            <button class="reviews__next visually-hidden" type="button">Следующий отзыв</button>
           </div>
           <p class="reviews__toggles slider__toggles">
-          <button class="slider__toggle slider__toggle--current" type="button">1</button>
-          <button class="slider__toggle" type="button">2</button>
-          <button class="slider__toggle" type="button">3</button>
+          <button class="slider__toggle slider__toggle--current" type="button"><span class="visually-hidden">1</span></button>
+          <button class="slider__toggle" type="button"><span class="visually-hidden">2</span></button>
+          <button class="slider__toggle" type="button"><span class="visually-hidden">3</span></button>
           </p>
         </div>
       </section>
@@ -137,39 +143,46 @@
         <div class="rates__wrapper">
           <div class="rates__table rates__slider">
             <div class="rates__item rates__item-advantage-header rates__slider-item">
-              <ul class="rates__advantages-list">
-                <li class="rates__advantage-item">Розовый фильтр</li>
-                <li class="rates__advantage-item">Смайлики</li>
-                <li class="rates__advantage-item">Комментарии</li>
+              <ul class="rates__advantage-headers-list">
+                <li class="rates__advantage-header-item">
+                  <div class="rates__rate-header">
+                    <p class="rates__rate-name">База</p>
+                    <p class="rates__rate-price">1,99 USD</p>
+                  </div>
+                </li>
+                <li class="rates__advantage-header-item">
+                  <div class="rates__rate-header rates__rate-header--hit">
+                    <p class="rates__rate-name">Стандарт</p>
+                    <p class="rates__rate-price">3,99 USD</p>
+                  </div>
+                </li>
+                <li class="rates__advantage-header-item">
+                  <div class="rates__rate-header">
+                    <p class="rates__rate-name">Анлим</p>
+                    <p class="rates__rate-price">9,99 USD</p>
+                  </div>
+                </li>
               </ul>
             </div>
             <div class="rates__item rates__slider-item">
-              <div class="rates__rate-header">
-                <p class="rates__rate-name">База</p>
-                <p class="rates__rate-price">1,99 USD</p>
-              </div>
-              <ul class="rates__advantages-list rates__advantages-status">
-                <li class="rates__advantage-item rates__advantage--check">Розовый фильтр</li>
-                <li class="rates__advantage-item rates__advantage--uncheck">Смайлики</li>
-                <li class="rates__advantage-item rates__advantage--uncheck">Комментарии</li>
+              <ul class="rates__advantages-list rates__advantages">
+                <li class="rates__advantage-item rates__advantage">Розовый фильтр</li>
+                <li class="rates__advantage-item rates__advantage">Смайлики</li>
+                <li class="rates__advantage-item rates__advantage">Комментарии</li>
               </ul>
             </div>
             <div class="rates__item rates__slider-item">
-              <div class="rates__rate-header rates__rate-header--hit">
-                <p class="rates__rate-name">Стандарт</p>
-                <p class="rates__rate-price">3,99 USD</p>
-              </div>
-              <ul class="rates__advantages-list rates__advantages-status">
-                <li class="rates__advantage-item rates__advantage--check">Розовый фильтр</li>
-                <li class="rates__advantage-item rates__advantage--check">Смайлики</li>
-                <li class="rates__advantage-item rates__advantage--uncheck">Комментарии</li>
+              <ul class="rates__status-list rates__advantages-status">
+                <li class="rates__status-item">
+                  <div class="rates__check"></div>
+                  <div class="rates__uncheck"></div>
+                  <div class="rates__uncheck"></div>
+                </li>
+                <li class="rates__status-item"></li>
+                <li class="rates__status-item"></li>
               </ul>
             </div>
             <div class="rates__item rates__slider-item">
-              <div class="rates__rate-header">
-                <p class="rates__rate-name">Анлим</p>
-                <p class="rates__rate-price">9,99 USD</p>
-              </div>
               <ul class="rates__advantages-list rates__advantages-status">
                 <li class="rates__advantage-item rates__advantage--check">Розовый фильтр</li>
                 <li class="rates__advantage-item rates__advantage--check">Смайлики</li>
@@ -178,9 +191,9 @@
             </div>
           </div>
           <p class="rates__toggles slider__toggles">
-            <button class="slider__toggle" type="button">1</button>
-            <button class="slider__toggle slider__toggle--current" type="button">2</button>
-            <button class="slider__toggle" type="button">3</button>
+            <button class="slider__toggle" type="button"><span class="visually-hidden">1</span></button>
+            <button class="slider__toggle slider__toggle--current" type="button"><span class="visually-hidden">2</span></button>
+            <button class="slider__toggle" type="button"><span class="visually-hidden">3</span></button>
             </p>
         </div>
       </section>
