все ещё верстаю индекс

--- a/source/index.html
+++ b/source/index.html
@@ -164,31 +164,34 @@
                 </li>
               </ul>
             </div>
-            <div class="rates__item rates__slider-item">
-              <ul class="rates__advantages-list rates__advantages">
-                <li class="rates__advantage-item rates__advantage">Розовый фильтр</li>
-                <li class="rates__advantage-item rates__advantage">Смайлики</li>
-                <li class="rates__advantage-item rates__advantage">Комментарии</li>
-              </ul>
-            </div>
-            <div class="rates__item rates__slider-item">
-              <ul class="rates__status-list rates__advantages-status">
-                <li class="rates__status-item">
-                  <div class="rates__check"></div>
-                  <div class="rates__uncheck"></div>
-                  <div class="rates__uncheck"></div>
-                </li>
-                <li class="rates__status-item"></li>
-                <li class="rates__status-item"></li>
-              </ul>
-            </div>
-            <div class="rates__item rates__slider-item">
-              <ul class="rates__advantages-list rates__advantages-status">
-                <li class="rates__advantage-item rates__advantage--check">Розовый фильтр</li>
-                <li class="rates__advantage-item rates__advantage--check">Смайлики</li>
-                <li class="rates__advantage-item rates__advantage--check">Комментарии</li>
-              </ul>
-            </div>
+              <div class="rates__advantages">
+                <div class="rates__item rates__slider-item">
+                  <ul class="rates__advantages-list">
+                    <li class="rates__advantage-item rates__advantage">Розовый фильтр</li>
+                    <li class="rates__advantage-item rates__advantage">Смайлики</li>
+                    <li class="rates__advantage-item rates__advantage">Комментарии</li>
+                  </ul>
+                </div>
+                <div class="rates__item rates__slider-item">
+                  <ul class="rates__status-list rates__advantages-status">
+                    <li class="rates__status-item--base visually-hidden">
+                      <div class="rates__check"></div>
+                      <div class="rates__uncheck"></div>
+                      <div class="rates__uncheck"></div>
+                    </li>
+                    <li class="rates__status-item--standart">
+                      <div class="rates__check"></div>
+                      <div class="rates__check"></div>
+                      <div class="rates__uncheck"></div>
+                    </li>
+                    <li class="rates__status-item--unlim visually-hidden">
+                      <div class="rates__check"></div>
+                      <div class="rates__check"></div>
+                      <div class="rates__check"></div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
           </div>
           <p class="rates__toggles slider__toggles">
             <button class="slider__toggle" type="button"><span class="visually-hidden">1</span></button>
